--- a/rutas/Info.plist
+++ b/rutas/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>AAA</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Activa la ubicacion</string>
 	<key>CFBundleDevelopmentRegion</key>
